kubernetes/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuberag-api
  namespace: kuberag
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuberag-api
  template:
    metadata:
      labels:
        app: kuberag-api
    spec:
      containers:
        - name: api
          image: radhika/kuberag-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 10
